--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "use-firebase",
-  "version": "1.0.0",
+  "name": "use-firebase-v2",
+  "version": "1.1.0",
   "description": "Simple firebase hook for react firebase projects",
   "main": "lib/index.js",
   "scripts": {
